# rk

./: CMakeLists.txt  proxy-pattern.deb
.github/workflows/: build.yml  ci.yml
include/: SchoolGirl.h  proxy.h
package/DEBIAN/: control
src/: SchoolGirl.cpp  main.cpp  proxy.cpp
tests/: CMakeLists.txt  test_SchoolGirl.cpp  test_proxy.cpp
